Added link to open-source code

--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
         </div>
       </div>
     </div>
+    <p>
+      <a href="https://github.com/Miranaa/WeatherAPP">Open-source code</a> by
+      Mirana D.
+    </p>
     <script src="src/script.js"></script>
   </body>
 </html>
